--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
         <p>A collection of our best moments together! 💕</p>
         <div class="slider">
             <div class="slides" style="height: 400px; width: 400px;">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.26 PM (1).jpeg" alt="Memory 1">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.26 PM.jpeg" alt="Memory 2">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.27 PM (1).jpeg" alt="Memory 3">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.27 PM.jpeg" alt="Memory 4">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.28 PM (1).jpeg" alt="Memory 5">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.28 PM (2).jpeg" alt="Memory 6">
-                <img src="img/WhatsApp Image 2025-03-19 at 10.42.28 PM.jpeg" alt="Memory 3">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.26 PM (1).jpeg" alt="Memory 1">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.26 PM.jpeg" alt="Memory 2">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.27 PM (1).jpeg" alt="Memory 3">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.27 PM.jpeg" alt="Memory 4">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.28 PM (1).jpeg" alt="Memory 5">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.28 PM (2).jpeg" alt="Memory 6">
+                <img src="WhatsApp Image 2025-03-19 at 10.42.28 PM.jpeg" alt="Memory 3">
             </div>
             <button class="prev" onclick="prevSlide()">&#10094;</button>
             <button class="next" onclick="nextSlide()">&#10095;</button>
