--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p>A collection of our best moments together! 💕</p>
         <div class="slider">
             <div class="slides" style="height: 400px; width: 400px;">
-                <img src="WhatsApp Image 2025-03-19 at 10.42.26 PM (1).jpeg" alt="Memory 1">
+                <img src="HappybirthdayAsi/WhatsApp Image 2025-03-19 at 10.42.26 PM (1).jpeg" alt="Memory 1">
                 <img src="WhatsApp Image 2025-03-19 at 10.42.26 PM.jpeg" alt="Memory 2">
                 <img src="WhatsApp Image 2025-03-19 at 10.42.27 PM (1).jpeg" alt="Memory 3">
                 <img src="WhatsApp Image 2025-03-19 at 10.42.27 PM.jpeg" alt="Memory 4">
